--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -350,8 +350,7 @@ if (GOOGLE_CLOUD_CPP_WITH_MOCKS)
         mocks/mock_data_connection.h
         mocks/mock_row_reader.cc
         mocks/mock_row_reader.h
-        mocks/query_row.cc
-        mocks/query_row.h)
+        mocks/mock_query_row.h)
     target_link_libraries(
         google_cloud_cpp_bigtable_mocks
         PUBLIC google-cloud-cpp::bigtable
