--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -348,9 +348,9 @@ if (GOOGLE_CLOUD_CPP_WITH_MOCKS)
         admin/mocks/mock_bigtable_instance_admin_connection.h
         admin/mocks/mock_bigtable_table_admin_connection.h
         mocks/mock_data_connection.h
+        mocks/mock_query_row.h
         mocks/mock_row_reader.cc
-        mocks/mock_row_reader.h
-        mocks/mock_query_row.h)
+        mocks/mock_row_reader.h)
     target_link_libraries(
         google_cloud_cpp_bigtable_mocks
         PUBLIC google-cloud-cpp::bigtable
