chore: disable macos-bazel GHA

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -77,15 +77,8 @@ jobs:
   # the additional jobs inherit any secrets needed to use the remote caches and
   # receive what version to checkout as an input.
   macos-bazel:
-    # Build the full matrix only on push events to the default branch, or
-    # when PR gets the has a `gha:full-build` label, or when it had the
-    # label already and it gets a new commit.
-    if: |-
-      ${{
-        github.event_name == 'schedule' ||
-        github.event_name == 'push' ||
-        contains(github.event.pull_request.labels.*.name, 'gha:full-build')
-      }}
+    # Disabled
+    if: false
     name: macOS-Bazel
     needs: [pre-flight]
     uses: ./.github/workflows/macos-bazel.yml
@@ -156,7 +149,7 @@ jobs:
     name: Notify-Google-Chat
     # Wait until all the other jobs have completed.
     needs:
-      - macos-bazel
+      # macos-bazel is disabled
       # macos-cmake is disabled
       - windows-bazel
       - windows-cmake
