add absl:crc to CMake

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -417,6 +417,7 @@ if (BUILD_TESTING)
                GTest::gtest
                gRPC::grpc++
                gRPC::grpc
+               absl::crc
                absl::memory
                absl::str_format
                protobuf::libprotobuf)
