--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -271,8 +271,7 @@ add_library(
     wait_for_consistency.h)
 target_link_libraries(
     google_cloud_cpp_bigtable
-    PUBLIC 
-           absl::memory
+    PUBLIC absl::memory
            google-cloud-cpp::bigtable_protos
            google-cloud-cpp::common
            google-cloud-cpp::grpc_utils
