--- a/.bazelrc
+++ b/.bazelrc
@@ -26,6 +26,9 @@ build:macos --cxxopt=-std=c++14
 # targets, such as protoc and the grpc plugin.
 build:linux --host_cxxopt=-std=c++14
 build:macos --host_cxxopt=-std=c++14
+build:windows --cxxopt=/std:c++14
+# The BoringSSL dependency requires C11.
+build:windows --conlyopt=/std:c11
 
 # Do not create the convenience links. They are inconvenient when the build
 # runs inside a docker image or if one builds a quickstart and then builds
