include test in CMake

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -474,6 +474,7 @@ if (BUILD_TESTING)
         internal/mutate_rows_limiter_test.cc
         internal/operation_context_factory_test.cc
         internal/operation_context_test.cc
+        internal/partial_result_set_reader_test.cc
         internal/prefix_range_end_test.cc
         internal/rate_limiter_test.cc
         internal/retry_traits_test.cc
