feat(bigtable): add support for PartialResultSetResume

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -206,6 +206,8 @@ add_library(
     internal/operation_context_factory.cc
     internal/operation_context_factory.h
     internal/partial_result_set_reader.h
+    internal/partial_result_set_resume.h
+    internal/partial_result_set_resume.cc
     internal/partial_result_set_source.cc
     internal/partial_result_set_source.h
     internal/prefix_range_end.cc
@@ -474,6 +476,7 @@ if (BUILD_TESTING)
         internal/mutate_rows_limiter_test.cc
         internal/operation_context_factory_test.cc
         internal/operation_context_test.cc
+        internal/partial_result_set_resume_test.cc
         internal/partial_result_set_source_test.cc
         internal/prefix_range_end_test.cc
         internal/rate_limiter_test.cc
