impl(universe_domain): add demos for additional services

--- a/google/cloud/universe_domain/demo/BUILD.bazel
+++ b/google/cloud/universe_domain/demo/BUILD.bazel
@@ -16,9 +16,11 @@ licenses(["notice"])  # Apache 2.0
 
 service_demos = [
     "bigquery",
+    "bigtable",
     "compute",
     "kms",
     "pubsub",
+    "spanner",
     "storage",
 ]
 
