--- a/google/cloud/universe_domain/demo/CMakeLists.txt
+++ b/google/cloud/universe_domain/demo/CMakeLists.txt
@@ -29,7 +29,14 @@ else ()
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 endif ()
 
-set(universe_domain_demos bigquery compute kms pubsub storage)
+set(universe_domain_demos
+    bigquery
+    bigtable
+    compute
+    kms
+    pubsub
+    spanner
+    storage)
 foreach (library ${universe_domain_demos})
     add_executable(${library}_demo ${library}.cc)
     target_link_libraries(${library}_demo google-cloud-cpp::${library}
