chore(bigtable): add minimum QueryPlan class with dummy behavior

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -212,6 +212,8 @@ add_library(
     internal/partial_result_set_source.h
     internal/prefix_range_end.cc
     internal/prefix_range_end.h
+    internal/query_plan.cc
+    internal/query_plan.h
     internal/rate_limiter.cc
     internal/rate_limiter.h
     internal/readrowsparser.cc
@@ -481,6 +483,7 @@ if (BUILD_TESTING)
         internal/partial_result_set_resume_test.cc
         internal/partial_result_set_source_test.cc
         internal/prefix_range_end_test.cc
+        internal/query_plan_test.cc
         internal/rate_limiter_test.cc
         internal/retry_traits_test.cc
         internal/traced_row_reader_test.cc
