--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -240,7 +240,6 @@ add_library(
     polling_policy.h
     prepared_query.cc
     prepared_query.h
-    query.cc
     query_row.cc
     query_row.h
     read_modify_write_rule.h
@@ -442,6 +441,7 @@ if (BUILD_TESTING)
         app_profile_config_test.cc
         async_read_stream_test.cc
         bigtable_version_test.cc
+        bound_query_test.cc
         bytes_test.cc
         cell_test.cc
         client_options_test.cc
@@ -499,8 +499,8 @@ if (BUILD_TESTING)
         mutation_batcher_test.cc
         mutations_test.cc
         polling_policy_test.cc
+        prepared_query_test.cc
         query_row_test.cc
-        query_test.cc
         read_modify_write_rule_test.cc
         row_range_test.cc
         row_reader_test.cc
