--- a/google/cloud/universe_domain/integration_tests/BUILD.bazel
+++ b/google/cloud/universe_domain/integration_tests/BUILD.bazel
@@ -28,7 +28,7 @@ cc_test(
     ],
     deps = [
         "//:common",
-        "//:experimental-universe_domain",
+        "//:universe_domain",
         "//google/cloud/testing_util:google_cloud_cpp_testing_private",
         "@com_google_googletest//:gtest_main",
         "@google_cloud_cpp//:compute",
