--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -249,7 +249,7 @@ cc_library(
 )
 
 cc_library(
-    name = "experimental-universe_domain",
+    name = "universe_domain",
     deps = [
         "//google/cloud:google_cloud_cpp_universe_domain",
     ],
