--- a/generator/integration_tests/BUILD.bazel
+++ b/generator/integration_tests/BUILD.bazel
@@ -145,6 +145,7 @@ filegroup(
     tags = ["integration-test"],
     deps = [
         ":google_cloud_cpp_generator_golden",
+        "//:universe_domain",
         "//google/cloud/testing_util:google_cloud_cpp_testing_private",
     ],
 ) for sample in glob(["golden/v1/samples/*.cc"])]
