--- a/google/cloud/storage/examples/CMakeLists.txt
+++ b/google/cloud/storage/examples/CMakeLists.txt
@@ -95,8 +95,10 @@ endforeach ()
 foreach (fname ${storage_examples})
     google_cloud_cpp_add_executable(target "storage_examples" "${fname}")
     target_link_libraries(
-        ${target} PRIVATE storage_examples_common google_cloud_cpp_testing
-                          google-cloud-cpp::storage google-cloud-cpp::common)
+        ${target}
+        PRIVATE storage_examples_common google_cloud_cpp_testing
+                google-cloud-cpp::storage google-cloud-cpp::common
+                google-cloud-cpp::universe_domain)
     add_test(NAME ${target} COMMAND ${target})
     set_tests_properties(
         ${target} PROPERTIES LABELS
