--- a/.typos.toml
+++ b/.typos.toml
@@ -70,5 +70,7 @@ extend-ignore-identifiers-re = [
   "NAM4",
   # Metadata is mispelled in this proto message name found in
   # google/cloud/aiplatform/v1/vizier_service.proto
-  "CheckTrialEarlyStoppingStateMetatdata"
+  "CheckTrialEarlyStoppingStateMetatdata",
+  # google/cloud/cloudsecuritycompliance/v1/deployment.proto
+  "conrol"
 ]
