--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -154,6 +154,7 @@ target_link_libraries(
            nlohmann_json::nlohmann_json
            google-cloud-cpp::api_client_protos
            google-cloud-cpp::api_field_info_protos
+           google-cloud-cpp::api_field_behavior_protos
            google-cloud-cpp::api_routing_protos
            google-cloud-cpp::cloud_extended_operations_protos
            google-cloud-cpp::longrunning_operations_protos
