revert accidental spanner changes

--- a/google/cloud/spanner/CMakeLists.txt
+++ b/google/cloud/spanner/CMakeLists.txt
@@ -199,7 +199,7 @@ add_library(
     read_partition.cc
     read_partition.h
     request_priority.h
-    result_source_interface.cc
+    results.cc
     results.h
     retry_policy.h
     row.cc
