--- a/protos/google/cloud/bigtable/test_proxy/BUILD.bazel
+++ b/protos/google/cloud/bigtable/test_proxy/BUILD.bazel
@@ -32,6 +32,7 @@ proto_library(
         "@com_google_googleapis//google/api:client_proto",
         "@com_google_googleapis//google/bigtable/v2:bigtable_proto",
         "@com_google_googleapis//google/rpc:status_proto",
+        "@com_google_protobuf//:descriptor_proto",
         "@com_google_protobuf//:duration_proto",
     ],
 )
