impl(bigtable): update query plan refresh retry logic to pass conformance tests

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -224,6 +224,7 @@ add_library(
     internal/rate_limiter.h
     internal/readrowsparser.cc
     internal/readrowsparser.h
+    internal/retry_traits.cc
     internal/retry_traits.h
     internal/row_reader_impl.h
     internal/rpc_policy_parameters.h
