--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -22,34 +22,34 @@ module(
 
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "bazel_skylib", version = "1.8.2")
-bazel_dep(name = "rules_cc", version = "0.1.4")
-bazel_dep(name = "abseil-cpp", version = "20250127.1")
+bazel_dep(name = "rules_cc", version = "0.2.14")
+bazel_dep(name = "abseil-cpp", version = "20250814.1")
 
 # For backwards compatibility with WORKSPACE.
 # The name "com_google_protobuf" is internally used by @bazel_tools,
 # a native repository we cannot override.
 # See https://github.com/googleapis/google-cloud-cpp/issues/15393
-bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
-bazel_dep(name = "boringssl", version = "0.0.0-20230215-5c22014")
+bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
+bazel_dep(name = "boringssl", version = "0.20241024.0")
 bazel_dep(name = "nlohmann_json", version = "3.11.3")
 bazel_dep(name = "curl", version = "8.8.0.bcr.3")
 bazel_dep(name = "crc32c", version = "1.1.0")
 bazel_dep(name = "opentelemetry-cpp", version = "1.19.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_python", version = "1.6.3")
-bazel_dep(name = "rules_apple", version = "3.16.0")
-bazel_dep(name = "googletest", version = "1.15.2")
+bazel_dep(name = "rules_apple", version = "4.1.0")
+bazel_dep(name = "googletest", version = "1.17.0")
 
-bazel_dep(name = "google_benchmark", version = "1.9.2", dev_dependency = True, repo_name = "com_google_benchmark")
+bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True, repo_name = "com_google_benchmark")
 bazel_dep(name = "yaml-cpp", version = "0.8.0", dev_dependency = True, repo_name = "com_github_jbeder_yaml_cpp")
 bazel_dep(name = "pugixml", version = "1.15", dev_dependency = True, repo_name = "com_github_zeux_pugixml")
 
 # Our `curl.BUILD` file uses these.
 bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
-bazel_dep(name = "c-ares", version = "1.19.1.bcr.1", repo_name = "com_github_cares_cares")
+bazel_dep(name = "c-ares", version = "1.34.5.bcr.2", repo_name = "com_github_cares_cares")
 
 # Pin this to fix a break in bazel/deps-cache.py
-bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1", dev_dependency = True, repo_name = "com_envoyproxy_protoc_gen_validate")
+bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.2", dev_dependency = True, repo_name = "com_envoyproxy_protoc_gen_validate")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
@@ -57,7 +57,7 @@ python.toolchain(
     python_version = "3.11",
 )
 
-bazel_dep(name = "grpc", version = "1.72.0")
+bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
 bazel_dep(name = "googleapis", version = "0.0.0-20251111-659ea6e9")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
