--- a/google/cloud/storage/examples/BUILD.bazel
+++ b/google/cloud/storage/examples/BUILD.bazel
@@ -29,6 +29,7 @@ cc_library(
     deps = [
         "//:common",
         "//:storage",
+        "//:universe_domain",
         "//google/cloud/storage:storage_client_testing",
         "//google/cloud/testing_util:google_cloud_cpp_testing_private",
     ],
