--- a/google/cloud/storage/BUILD.bazel
+++ b/google/cloud/storage/BUILD.bazel
@@ -77,7 +77,6 @@ cc_library(
         "@abseil-cpp//absl/algorithm:container",
         "@abseil-cpp//absl/strings",
         "@abseil-cpp//absl/time",
-        "@crc32c",
         "@curl",
         "@googleapis//google/storage/v2:storage_cc_grpc",
         "@googleapis//google/storage/v2:storage_cc_proto",
@@ -141,12 +140,12 @@ cc_library(
     deps = [
         "//:common",
         "//google/cloud:google_cloud_cpp_rest_internal",
+        "@abseil-cpp//absl/crc:crc32c",
         "@abseil-cpp//absl/strings:cord",
         "@abseil-cpp//absl/strings:str_format",
         "@abseil-cpp//absl/time",
         "@abseil-cpp//absl/types:span",
         "@abseil-cpp//absl/types:variant",
-        "@crc32c",
         "@curl",
         "@nlohmann_json//:json",
     ] + select({
