--- a/google/cloud/testing_util/CMakeLists.txt
+++ b/google/cloud/testing_util/CMakeLists.txt
@@ -57,10 +57,9 @@ add_library(
     timer.h)
 target_link_libraries(
     google_cloud_cpp_testing
-    PUBLIC absl::symbolize absl::failure_signal_handler
-           google-cloud-cpp::common GTest::gmock
-    PRIVATE opentelemetry-cpp::in_memory_span_exporter
-            opentelemetry-cpp::trace)
+    PUBLIC absl::symbolize absl::failure_signal_handler google-cloud-cpp::common
+           GTest::gmock
+    PRIVATE opentelemetry-cpp::in_memory_span_exporter opentelemetry-cpp::trace)
 
 google_cloud_cpp_add_common_options(google_cloud_cpp_testing)
 
