fix checkers; remove ifdef in generator ITs

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -299,9 +299,8 @@ target_link_libraries(
            gRPC::grpc++
            gRPC::grpc
            protobuf::libprotobuf)
-target_compile_definitions(
-    google_cloud_cpp_bigtable
-    PRIVATE GOOGLE_CLOUD_CPP_BIGTABLE_WITH_OTEL_METRICS)
+target_compile_definitions(google_cloud_cpp_bigtable
+                           PRIVATE GOOGLE_CLOUD_CPP_BIGTABLE_WITH_OTEL_METRICS)
 target_link_libraries(google_cloud_cpp_bigtable
                       PUBLIC google-cloud-cpp::opentelemetry)
 set(EXTRA_MODULES "google_cloud_cpp_opentelemetry" "opentelemetry_metrics")
