feat: mark opentelemetry as required in build files (#15830)

--- a/google/cloud/testing_util/CMakeLists.txt
+++ b/google/cloud/testing_util/CMakeLists.txt
@@ -57,14 +57,10 @@ add_library(
     timer.h)
 target_link_libraries(
     google_cloud_cpp_testing
-    PUBLIC absl::symbolize absl::failure_signal_handler
-           google-cloud-cpp::common GTest::gmock)
-if (opentelemetry-cpp_FOUND)
-    target_link_libraries(
-        google_cloud_cpp_testing
-        PRIVATE opentelemetry-cpp::in_memory_span_exporter
-                opentelemetry-cpp::trace)
-endif ()
+    PUBLIC absl::symbolize absl::failure_signal_handler google-cloud-cpp::common
+           GTest::gmock
+    PRIVATE opentelemetry-cpp::in_memory_span_exporter opentelemetry-cpp::trace)
+
 google_cloud_cpp_add_common_options(google_cloud_cpp_testing)
 
 include(CheckCXXSymbolExists)
