--- a/google/cloud/maintenance/BUILD.bazel
+++ b/google/cloud/maintenance/BUILD.bazel
@@ -21,7 +21,7 @@ licenses(["notice"])  # Apache 2.0
 service_dirs = ["api/v1/"]
 
 googleapis_deps = [
-    "@com_google_googleapis//google/cloud/maintenance/api/v1:maintenance_cc_grpc",
+    "@com_google_googleapis//google/cloud/maintenance/api/v1:api_cc_grpc",
 ]
 
 cc_gapic_library(
