WIP: product neutral guides

--- a/docfx/CMakeLists.txt
+++ b/docfx/CMakeLists.txt
@@ -17,6 +17,9 @@
 if (NOT GOOGLE_CLOUD_CPP_INTERNAL_DOCFX)
     return()
 endif ()
+
+add_subdirectory(product-neutral-guides)
+
 if (APPLE OR WIN32)
     message(STATUS "The docfx directory is only used and tested on Linux")
     return()
